add and fix code

--- a/tutor_booking/tutors/templates/tutors/tutor_list.html
+++ b/tutor_booking/tutors/templates/tutors/tutor_list.html
@@ -5,7 +5,7 @@
         <h2>{{ tutor.username }}</h2>
         <p><strong>Bio:</strong> {{ tutor.tutor_profile.bio }}</p>
         <p><strong>Subjects:</strong> {{ tutor.tutor_profile.subjects }}</p>
-        <p><strong>Experience year:</strong> {{ tutor.tutor_profile.experience_years }} лет</p>
-        <p><strong>Price:</strong> {{ tutor.tutor_profile.price_per_hour }}₽</p>
+        <p><strong>Experience:</strong> {{ tutor.tutor_profile.experience_years }} year</p>
+        <p><strong>Price:</strong> {{ tutor.tutor_profile.price_per_hour }}$</p>
     </div>
 {% endfor %}
