--- a/tutor_booking/tutors/templates/tutors/tutor_detail.html
+++ b/tutor_booking/tutors/templates/tutors/tutor_detail.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<h1>{{ tutor.username }}</h1>
 
-</body>
-</html>
+<p><strong>Bio:</strong> {{ tutor.tutor_profile.bio }}</p>
+<p><strong>Subjects:</strong> {{ tutor.tutor_profile.subjects }}</p>
+<p><strong>Experience:</strong> {{ tutor.tutor_profile.experience_years }} year</p>
+<p><strong>Price:</strong> {{ tutor.tutor_profile.price_per_hour }}$</p>
+
+<a href="{% url 'tutor_list' %}">← Back to list</a>
