--- a/tutor_booking/tutors/templates/tutors/tutor_detail.html
+++ b/tutor_booking/tutors/templates/tutors/tutor_detail.html
@@ -6,3 +6,10 @@
 <p><strong>Price:</strong> {{ tutor.tutor_profile.price_per_hour }}$</p>
 
 <a href="{% url 'tutor_list' %}">← Back to list</a>
+
+<form method="post">
+    {% csrf_token %}
+    <label id="datetime">Date and time of the lesson:</label>
+    <input type="datetime-local" name="datetime" required>
+    <button type="submit">To enrol</button>
+</form>
