--- a/tutor_booking/accounts/templates/accounts/login.html
+++ b/tutor_booking/accounts/templates/accounts/login.html
@@ -17,3 +17,8 @@
 
   <button type="submit">Sign in</button>
 </form>
+<p class="mt-4 text-center">
+    Don't have an account?
+    <a href="{% url 'register' %}" class="text-blue-500 hover:underline">Sign up here</a>
+</p>
+
