--- a/tutor_booking/tutors/templates/tutors/home.html
+++ b/tutor_booking/tutors/templates/tutors/home.html
@@ -1,10 +1,18 @@
-<h1>Welcome to the Booking Platform!</h1>
+<head>
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+
+<h1 class="text-4xl font-bold text-blue-600">Welcome to the Booking Platform!</h1>
 
 {% if user.is_authenticated %}
     <p>Hello, {{ user.username }}!</p>
     <a href="{% url 'tutor_list' %}">View Tutors</a><br>
     <a href="{% url 'my_bookings' %}">My Booking</a><br>
-    <a href="{% url 'logout' %}">Log out</a>
+        <form method="post" action="{% url 'logout' %}" style="display: inline;">
+            {% csrf_token %}
+            <button type="submit" style="background: none; border: none; color: blue; cursor: pointer;">Log out</button>
+        </form>
+
 {% else %}
     <a href="{% url 'login' %}">Login</a><br>
     <a href="{% url 'register' %}">Register</a>
