--- a/tutor_booking/accounts/templates/accounts/login.html
+++ b/tutor_booking/accounts/templates/accounts/login.html
@@ -1,24 +1,40 @@
-<h1>Login</h1>
+<head>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
 
-<form method="post">
-  {% csrf_token %}
-  {{ form.non_field_errors }}
-  <div>
-    {{ form.username.label_tag }}
-    {{ form.username }}
-    {{ form.username.errors }}
+<body class="min-h-screen flex items-center justify-center bg-gray-100">
+
+  <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
+    <h1 class="text-3xl font-bold mb-6 text-center text-gray-800">Login</h1>
+
+    <form method="post" class="space-y-4">
+      {% csrf_token %}
+      {{ form.non_field_errors }}
+
+      <div>
+        {{ form.username.label_tag }}
+        <input type="text" name="username" class="w-full p-2 mt-1 border border-gray-300 rounded bg-gray-50">
+        {{ form.username.errors }}
+      </div>
+
+      <div>
+        {{ form.password.label_tag }}
+        <input type="password" name="password" class="w-full p-2 mt-1 border border-gray-300 rounded bg-gray-50">
+        {{ form.password.errors }}
+      </div>
+
+      <button type="submit" class="w-full bg-green-500 hover:bg-green-600 text-white font-semibold py-2 px-4 rounded">
+        Sign In
+      </button>
+    </form>
+
+    <p class="mt-6 text-center text-gray-600">
+      Don't have an account?
+      <a href="{% url 'register' %}" class="text-blue-500 hover:underline">Sign up here</a>
+    </p>
   </div>
 
-  <div>
-    {{ form.password.label_tag }}
-    {{ form.password }}
-    {{ form.password.errors }}
-  </div>
+</body>
 
-  <button type="submit">Sign in</button>
-</form>
-<p class="mt-4 text-center">
-    Don't have an account?
-    <a href="{% url 'register' %}" class="text-blue-500 hover:underline">Sign up here</a>
-</p>
+
 
