--- a/tutor_booking/accounts/templates/accounts/register.html
+++ b/tutor_booking/accounts/templates/accounts/register.html
@@ -13,19 +13,19 @@
 
       <div>
         {{ form.username.label_tag }}
-        <input type="text" name="username" class="w-full p-2 mt-1 border border-gray-300 rounded bg-gray-50">
+        <input type="text" name="username" required maxlength="30" class="w-full p-2 mt-1 border border-gray-300 rounded bg-gray-50">
         {{ form.username.errors }}
       </div>
 
       <div>
         {{ form.password.label_tag }}
-        <input type="password" name="password" class="w-full p-2 mt-1 border border-gray-300 rounded bg-gray-50">
+        <input type="password" name="password" required minlength="6" class="w-full p-2 mt-1 border border-gray-300 rounded bg-gray-50">
         {{ form.password.errors }}
       </div>
 
       <div>
   {{ form.role.label_tag }}
-  <select name="role" class="w-full p-2 mt-1 border border-gray-300 rounded bg-gray-50">
+        <select name="role" required class="w-full p-2 mt-1 border border-gray-300 rounded bg-gray-50">
     <option value="student">Student</option>
     <option value="tutor">Tutor</option>
   </select>
