--- a/tutor_booking/tutors/templates/tutors/tutor_list.html
+++ b/tutor_booking/tutors/templates/tutors/tutor_list.html
@@ -6,13 +6,43 @@
 
   <div class="max-w-6xl mx-auto px-4">
     <h1 class="text-4xl font-bold mb-10 text-center text-gray-800">Available Tutors</h1>
+    <!-- Поисковая форма -->
+<form method="get" class="mb-10 max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-4">
+  <input
+    type="text"
+    name="q"
+    value="{{ query }}"
+    placeholder="Search by name"
+    class="w-full px-4 py-2 border border-gray-300 rounded shadow focus:outline-none focus:ring-2 focus:ring-blue-500"
+  />
+  <input
+    type="text"
+    name="subject"
+    value="{{ subject }}"
+    placeholder="Search by subject"
+    class="w-full px-4 py-2 border border-gray-300 rounded shadow focus:outline-none focus:ring-2 focus:ring-blue-500"
+  />
+  <input
+    type="number"
+    name="max_price"
+    value="{{ max_price }}"
+    placeholder="Max price"
+    class="w-full px-4 py-2 border border-gray-300 rounded shadow focus:outline-none focus:ring-2 focus:ring-blue-500"
+  />
+  <button
+    type="submit"
+    class="bg-blue-500 hover:bg-blue-600 text-white font-semibold px-6 py-2 rounded">
+    Apply
+  </button>
+</form>
+
 
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
       {% for tutor in tutors %}
         <div class="bg-white p-6 rounded-lg shadow hover:shadow-md transition">
           <h2 class="text-xl font-semibold mb-2 text-gray-800">{{ tutor.username }}</h2>
           <p class="text-gray-600 mb-1"><strong>Subjects:</strong> {{ tutor.tutor_profile.subjects }}</p>
-          <p class="text-gray-600 mb-1"><strong>Experience:</strong> {{ tutor.t.tutor_profile.experience_years }} years</p>
+          <p class="text-gray-600 mb-1"><strong>Experience:</strong> {{ tutor.tutor_profile.experience_years }} years</p>
           <p class="text-gray-600 mb-4"><strong>Price:</strong> {{ tutor.tutor_profile.price_per_hour }}$</p>
           <a href="{% url 'tutor_detail' tutor.slug %}" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded">
             View Profile
@@ -23,4 +53,11 @@
   </div>
 
 </body>
+<div class="mt-12 flex justify-center">
+  <a href="/" class="bg-gray-200 hover:bg-gray-300 text-gray-800 font-semibold px-6 py-2 rounded">
+    ← Back
+  </a>
+</div>
+
+
 
